[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
url = "2.0"