[package]
name = "high-performance-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.0"
memchr = "2.0"
thiserror = "1.0"